--- a/PokeAPI/App.xaml
+++ b/PokeAPI/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="PokeAPI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PokeAPI"
-             StartupUri="LoginPanel.xaml">
+             xmlns:local="clr-namespace:PokeAPI">
 
     <Application.Resources>
 
